# green-ops-lite

./: BLOG.md  Dockerfile  README.md  app.py  audit_trail.py  generate_data.py  greenops_lora_training.ipynb  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  sla.py
datasets/: actor_val.jsonl  overseer_val.jsonl
env/: environment.py  grader.py  models.py
server/: app.py
